[package]
name = "polyline-iter"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency iterator-based Google Encoded Polyline encoder and decoder"
readme = "README.md"
repository = "https://github.com/kinkard/polyline-iter"
license = "MIT OR Apache-2.0"
keywords = ["polyline", "geo", "maps"]
include = ["**/*.rs"]

[dependencies]
# No dependencies
