[package]
name = "polyline-iter"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency iterator-based Google Encoded Polyline encoder and decoder"
readme = "README.md"
repository = "https://github.com/kinkard/polyline-iter"
license = "MIT OR Apache-2.0"
keywords = ["polyline", "geo", "maps"]
include = ["src/*.rs"]

[dependencies]
# No dependencies

[dev-dependencies]
criterion = { version = "0.7", default-features = false }
pretty_assertions = "1"
# To bench against https://github.com/georust/polyline
polyline = "0.11"

[[bench]]
name = "polyline_benchmarks"
harness = false
